# hasmin

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  HLint.hs  LICENSE  Main.hs  README.md  buildforprofiling.sh  hasmin.cabal  stack.yaml  upload-docs.sh
benchmarks/: Benchmarks.hs  notes.txt
src/: Hasmin.hs
src/Hasmin/: Class.hs  Config.hs  Properties.hs  Selector.hs  Utils.hs
src/Hasmin/Parser/: BasicShape.hs  BorderRadius.hs  Color.hs  Dimension.hs  Gradient.hs  Internal.hs  Numeric.hs  PercentageLength.hs  Position.hs  Primitives.hs  Selector.hs  String.hs  TimingFunction.hs  TransformFunction.hs  Utils.hs  Value.hs
src/Hasmin/Types/: BasicShape.hs  BgSize.hs  BorderRadius.hs  Class.hs  Color.hs  Declaration.hs  Dimension.hs  FilterFunction.hs  Gradient.hs  Numeric.hs  PercentageLength.hs  Position.hs  RepeatStyle.hs  Selector.hs  Shadow.hs  String.hs  Stylesheet.hs  TimingFunction.hs  TransformFunction.hs  Value.hs
tests/: DocTest.hs  SpecHelper.hs
tests/Hasmin/: SelectorSpec.hs  TestUtils.hs
tests/Hasmin/Parser/: InternalSpec.hs  ValueSpec.hs
tests/Hasmin/Types/: BasicShapeSpec.hs  BgSizeSpec.hs  ColorSpec.hs  DeclarationSpec.hs  DimensionSpec.hs  FilterFunctionSpec.hs  GradientSpec.hs  PositionSpec.hs  RepeatStyleSpec.hs  SelectorSpec.hs  ShadowSpec.hs  StringSpec.hs  StylesheetSpec.hs  TimingFunctionSpec.hs  TransformFunctionSpec.hs  ValueSpec.hs
