name:                hasmin
version:             1.0.1
license:             BSD3
license-file:        LICENSE
author:              (c) 2017 Cristian Adrián Ontivero <cristianontivero@gmail.com>
maintainer:          Cristian Adrián Ontivero <cristianontivero@gmail.com>
synopsis:            CSS Minifier
homepage:            https://github.com/contivero/hasmin#readme
bug-reports:         https://github.com/contivero/hasmin/issues
category:            Text
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
description:
    A CSS minifier which not only aims at reducing the amount of bytes of the
    output, but also at improving gzip compression. It may be used as a library,
    or a stand-alone executable. For the library, refer to the Hasmin module
    documentation. For the program: the output is the minified CSS file, but
    hasmin allows also its compression into gzip using Google's Zopfli library.
    .
    To use it: ./hasmin input.css > output.css
    .
    By default, most minification techniques are enabled. For a list of
    available flags, do: ./hasmin --help

source-repository head
  type: git
  location: https://github.com/contivero/hasmin.git

executable hasmin
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fwarn-tabs -fwarn-unused-do-bind -Wincomplete-uni-patterns -Wincomplete-record-updates  -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wredundant-constraints
  main-is:             Main.hs
  other-modules:       Paths_hasmin
  build-depends:       base                 >=4.9        && <5.1
                     , optparse-applicative >=0.11       && <0.15
                     , text                 >=1.2        && <1.3
                     , hopfli               >=0.2        && <0.4
                     , bytestring           >=0.10.2.0   && <0.11
                     , gitrev               >=1.0.0      && <1.4
                     , hasmin

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -fwarn-tabs -fwarn-unused-do-bind -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wredundant-constraints
  exposed-modules:     Hasmin
                     , Hasmin.Config
                     , Hasmin.Class
                     , Hasmin.Types.Stylesheet
                     -- exposed because it is needed by tests:
                     , Hasmin.Parser.Internal
                     , Hasmin.Parser.Value
                     , Hasmin.Types.Color
                     , Hasmin.Types.Declaration
                     , Hasmin.Types.Dimension
                     , Hasmin.Types.Numeric
                     , Hasmin.Types.TransformFunction
                     , Hasmin.Types.Value
                     , Hasmin.Types.RepeatStyle
                     , Hasmin.Types.FilterFunction
                     , Hasmin.Types.Position
                     , Hasmin.Types.BgSize
                     , Hasmin.Types.String
                     , Hasmin.Utils
                     , Hasmin.Types.TimingFunction
  other-modules:       Hasmin.Parser.Utils
                     , Hasmin.Properties
                     , Hasmin.Types.Selector
                     , Hasmin.Types.Gradient
                     , Hasmin.Types.PercentageLength
                     , Hasmin.Types.Shadow
  build-depends:       base            >=4.9        && <5.1
                     , bifunctors      >=5.4        && <5.5
                     , attoparsec      >=0.12       && <0.14
                     , containers      >=0.5        && <0.6
                     , matrix          >=0.3.4      && <0.4
                     , mtl             >=2.2.1      && <2.3
                     , numbers         >=3000.2.0.0 && <3000.3
                     , parsers         >=0.12.3     && <0.13
                     , text            >=1.2        && <1.3

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  ghc-options:         -O2 -Wall -fwarn-tabs -fwarn-unused-do-bind -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wredundant-constraints
  default-extensions:  OverloadedStrings
  other-modules:       Hasmin.Parser.InternalSpec
                     , Hasmin.Parser.ValueSpec
                     , Hasmin.TestUtils
                     , Hasmin.Types.ColorSpec
                     , Hasmin.Types.DeclarationSpec
                     , Hasmin.Types.DimensionSpec
                     , Hasmin.Types.FilterFunctionSpec
                     , Hasmin.Types.GradientSpec
                     , Hasmin.Types.PositionSpec
                     , Hasmin.Types.RepeatStyleSpec
                     , Hasmin.Types.SelectorSpec
                     , Hasmin.Types.ValueSpec
                     , Hasmin.Types.BgSizeSpec
                     , Hasmin.Types.ShadowSpec
                     , Hasmin.Types.StringSpec
                     , Hasmin.Types.StylesheetSpec
                     , Hasmin.Types.TimingFunctionSpec
                     , Hasmin.Types.TransformFunctionSpec
  build-depends:       base             >=4.9     && <5.1
                     , attoparsec       >=0.12    && <0.14
                     , hspec            >=2.2     && <3.0
                     , hspec-attoparsec >=0.1.0.0 && <0.2
                     , mtl              >=2.2.1   && <2.3
                     , QuickCheck       >=2.8     && <3.0
                     , text             >=1.2     && <1.3
                     , hasmin

test-suite doctest
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             DocTest.hs
  ghc-options:         -threaded -Wall -fno-warn-orphans
  build-depends:       base             >=4.9     && <5.1
                     , doctest          >=0.11    && <0.14
                     , doctest-discover >=0.1.0.0 && <0.2
                     , hasmin

benchmark bench
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             Benchmarks.hs
  ghc-options:         -threaded -Wall -fno-warn-orphans
  build-depends:       base             >=4.9     && <5.1
                     , criterion        >=0.11    && <1.3
                     , directory        >=1.3.0.0 && <1.4
                     , text             >=1.2     && <1.3
                     , hasmin
